--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@prisma/client": "^6.12.0",
     "@react-google-maps/api": "^2.20.7",
+    "axios": "^1.11.0",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "lucide-react": "^0.536.0",
